Fix #869: wrap iframes and control their width

--- a/src/frontend/src/components/Post/telescope-post-content.css
+++ b/src/frontend/src/components/Post/telescope-post-content.css
@@ -91,3 +91,22 @@
   display: block;
   font-style: italic;
 }
+
+/**
+ * For YouTube, Vimeo <iframe> elements, we wrap them
+ * in a <div> so we can expand them to fill the width.
+ * See https://css-tricks.com/fluid-width-video/#article-header-id-0
+ */
+.telescope-post-content .iframe-video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+
+.telescope-post-content .iframe-video-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
